Fixed alignment issues on all pages and unified UI

--- a/frontend/src/StyleAndImg/style.css
+++ b/frontend/src/StyleAndImg/style.css
@@ -435,7 +435,6 @@ input {
   border-radius: 10px;
   font-family: 'Space Mono', monospace;
   font-size: 25px;
-  margin:10px;
   transition: transform .2s;
 }
 
@@ -781,13 +780,14 @@ input {
 }
 
 .paginationBttns {
-  width: 80%;
+  width: 100%;
   height: 50px;
   /*opacity: 0.5;*/
   list-style: none;
   display: flex;
   justify-content: center;
   padding-top: 20px;
+  padding-left: 0px !important;
   color: #ffffff;
 }
 
@@ -801,7 +801,7 @@ input {
 }
 
 .paginationDisabled a {
-  border: none;
+  display: none;
   color: transparent;
 }
 
